feat: task 5 finalize styling

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   --primary-mockup-color: #0e5dca;
   --secondary-mockup-color: #117b56;
   --info-mockup-color: #f8d38a;
+  --border-color: #d3d3e0;
 }
 
 .data-table-container {
