--- a/src/components/shipment-mockup/index.css
+++ b/src/components/shipment-mockup/index.css
@@ -24,11 +24,12 @@
   width: 90%;
   background-color: #fefeff;
   padding: 2em;
-  margin: 0 auto;
+  margin: 1em auto;
   box-sizing: border-box;
   border-radius: 10px;
-  border: 1px solid #dededf;
+  border: 1px solid var(--border-color);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  overflow: auto;
 }
 
 .shipment-card-header {
@@ -51,13 +52,13 @@
   gap: 0.5em;
   padding: 1.5em;
   border-radius: 8px;
-  border: 1px solid #dededf;
+  border: 1px solid var(--border-color);
   margin-bottom: 1em;
 }
 
 .shipment-table-container {
   border-radius: 8px;
-  border: 1px solid #dededf;
+  border: 1px solid var(--border-color);
   overflow: auto;
 }
 
@@ -80,6 +81,7 @@
 .shipment-table th {
   color: #424b53;
   font-weight: 500;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .shipment-table thead th:first-child {
@@ -110,11 +112,11 @@
 }
 
 .shipment-table thead tr {
-  border-bottom: 1px solid #dededf;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .shipment-table tbody tr:not(:last-child) td {
-  border-bottom: 1px solid #dededf;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .pagination-controls {
